# the-grid

./: .gitignore  README.md  pyproject.toml
src/: dev.ipynb
src/city_network/: citygrid.py  dev.ipynb  results.ipynb
